wordflowbiulderror/Build Wordflow_2025-08-10T13-11-08.txt

Showing Recent Errors Only

Build target Wordflow of project Wordflow with configuration Debug

SwiftCompile normal arm64 Compiling\ TypingTestManager.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingTestManager.swift (in target 'Wordflow' from project 'Wordflow')

Failed frontend command:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -c /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/CustomTaskCreationView.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/BasicErrorCounter.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/BasicTTSManager.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/BasicTypingPracticeView.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/ContentView.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/DelaxQualityManager.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/Document.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/ExportManager.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/IELTSTask.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TestCompletionView.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/IELTSTaskRepository.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/Project.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/Tag.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingResult.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingResultRepository.swift -primary-file /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingTestManager.swift /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/WordflowApp.swift /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/DerivedSources/GeneratedAssetSymbols.swift -emit-dependencies-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64/TypingTestManager.d -emit-const-values-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64/TypingTestManager.swiftconstvalues -emit-reference-dependencies-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64/TypingTestManager.swiftdeps -serialize-diagnostics-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64/TypingTestManager.dia -emit-localized-strings -emit-localized-strings-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64 -target arm64-apple-macos14.0 -Xllvm -aarch64-use-tbi -enable-objc-interop -stack-check -sdk /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX15.5.sdk -I /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Products/Debug -F /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Products/Debug -no-color-diagnostics -enable-testing -g -debug-info-format\=dwarf -dwarf-version\=4 -module-cache-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -serialize-debugging-options -const-gather-protocols-file /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64/Wordflow_const_extract_protocols.json -enable-experimental-feature DebugDescriptionMacro -enable-bare-slash-regex -empty-abi-descriptor -validate-clang-modules-once -clang-build-session-file /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -working-directory -Xcc /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow -resource-dir /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift -enable-anonymous-context-mangled-names -file-compilation-dir /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow -Xcc -ivfsstatcache -Xcc /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx15.5-24F74-8254517eb8b97d462ccbc072ba9094c9.sdkstatcache -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Wordflow-generated-files.hmap -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Wordflow-own-target-headers.hmap -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Wordflow-all-target-headers.hmap -Xcc -iquote -Xcc /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Wordflow-project-headers.hmap -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Products/Debug/include -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/DerivedSources-normal/arm64 -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/DerivedSources/arm64 -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/DerivedSources -Xcc -DDEBUG\=1 -module-name Wordflow -frontend-parseable-output -disable-clang-spi -target-sdk-version 15.5 -target-sdk-name macosx15.5 -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/local/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server -in-process-plugin-server-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/libSwiftInProcPluginServer.dylib -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/plugins -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/local/lib/swift/host/plugins -o /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Build/Intermediates.noindex/Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64/TypingTestManager.o -index-unit-output-path /Wordflow.build/Debug/Wordflow.build/Objects-normal/arm64/TypingTestManager.o -index-store-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/Wordflow-ayorvnbjursadtajqvmbshmpaena/Index.noindex/DataStore -index-system-modules

SwiftCompile normal arm64 /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingTestManager.swift (in target 'Wordflow' from project 'Wordflow')
    cd /Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow
    

/Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingTestManager.swift:215:23: error: value of type 'String.Element' (aka 'Character') has no member 'isControl'
                !char.isControl || char.isNewline || char.isWhitespace
                 ~~~~ ^~~~~~~~~
/Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingTestManager.swift:460:13: warning: initialization of immutable value 'modeKey' was never used; consider replacing with assignment to '_' or removing it
        let modeKey = timerMode.id
        ~~~~^~~~~~~
        _

/Users/hiroshikodera/repos/_active/apps/wordflow/Wordflow/Wordflow/TypingTestManager.swift:215:23: Value of type 'String.Element' (aka 'Character') has no member 'isControl'



Build failed    2025-08-10, 1:11 PM    0.7 seconds
